<resources>
    <string name="app_name">Self Training</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configuration</string>

    <!-- menu principal -->
    <string name="action_ejercicios">Exercises</string>
    <string name="action_flexiones">Push-Ups</string>
    <string name="action_abdominales">Abs</string>
    <string name="action_fondos">Dips</string>
    <string name="action_sentadillas">xxxxxxxxx</string>
    <string name="action_dominadas">Pull-ups</string>
    <string name="action_gemelos">xxxxxxxxxxx</string>
    <string name="action_ajustes">Configuration</string>
    <string name="action_configuracion">Configuration</string>
    <string name="action_test_resistencia">Stress test</string>
    <string name="action_acerca_de">About...</string>


    <string name="title_activity_flexiones">Push-ups</string>

    <!-- menu Context -->
    <string name="menu_cerrar_sesion">Logout</string>
    <string name="menu_borrar_datos_usuario">Setup data</string>
    <!-- alertdialog acetar/cancelar borrar datos -->
    <string name="alert_dialog_aceptar_title">Drop training from </string>
    <string name="alert_dialog_aceptar_message">This option cannot be undo.</string>
    <string name="alert_dialog_borrado"> dropped.</string>
    <string name="alert_dialog_cancelado">Dropped canceled.</string>

    <!-- plantilla series -->
    <string name="serie">Serie</string>
    <string name="numero_series">Series</string>
    <string name="repeticion">Repetition</string>
    <string name="numero_repeticiones">Repetitions</string>
    <string name="hecha">Done</string>
    <string name="diez_segundos_mas">+ 10 sec.</string>
    <string name="diez_segundos_menos">- 10 sec.</string>
    <string name="tiempo_de_descanso">Pause time</string>
    <string name="tiempo_de_descanso_despues">sec.</string>
    <string name="terminar_cuenta_atras">Stop countdown</string>
    <string name="numero_cuenta_atras">60</string>

    <!-- plantilla series dialogbox final serie -->
    <string name="dialog_box_">Tap again to exit app.</string>
    <string name="dialog_box_titulo_final_serie">Serie is finished!</string>
    <string name="dialog_box_mensaje_final_serie">You can change repetitions number or date.</string>
    <string name="calorias_consumidas_aproximadas">Calories consumed aproximately</string>

    <!-- salir de la app -->
    <string name="salir">Tap again to exit app.</string>

    <!-- goLoginActivity -->
    <string name="go_login_activity_title">Setup Data.</string>
    <string name="go_login_activity_message">There is no data or you want to re-create them. \nYou cannot undo this job. \nDo you want to create/delete data?</string>


    <!-- series -->
    <string name="primera_serie">First</string>
    <string name="segunda_serie">Second</string>
    <string name="tercera_serie">Third</string>
    <string name="cuarta_serie">Forth</string>
    <string name="quinta_serie">Fifth</string>
    <string name="title_activity_abdominales">Abdominales</string>
    <string name="title_activity_fondos">Fondos</string>
    <string name="title_activity_sentadillas">Sentadillas</string>
    <string name="title_activity_dominadas">Dominadas</string>
    <string name="title_activity_gemelos">xxxxxxx</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_test_resistencia">Stress test</string>

    <!-- categorias -->

    <!-- login -->
    <string name="user_hint">User</string>
    <string name="password_hint">Password</string>
    <string name="remember_text">Remember </string>
    <string name="button_text">LOGIN</string>
    <string name="error_user">El campo Usuario no puede estar vacío. Inténtalo otra vez.</string>
    <string name="error_password">El campo debe tener al menos cuatro caracteres. Inténtalo otra vez.</string>

    <!-- preferences -->
    <string name="usuario_name">User Information</string>
    <string name="usuario_title">User Name</string>
    <string name="usuario_summary">Type your name.</string>

    <string name="age_title">User Age</string>
    <string name="age_summary">Age</string>

    <string name="weight_title">User Weight</string>
    <string name="weight_summary">Weight</string>

    <string name="categoria2_title">Traffic information</string>
    <string name="categoria3_title">Kind of route </string>
    <string name="categoria4_title">Waiting time</string>

    <!-- Flexiones -->
    <string name="categoria_flexiones">Push_ups</string>
    <string name="series_flexiones">5</string>
    <string name="repeticiones_flexiones">13</string>
    <string name="tiempo_recuperacion_flexiones">60</string>
    <string name="fondo_pantalla_flexiones">color/holo_orange_dark</string>

    <!-- Abdominales -->
    <string name="categoria_abdominales">Abs</string>
    <string name="series_abdominales">5</string>
    <string name="repeticiones_abdominales">13</string>
    <string name="tiempo_recuperacion_abdominales">60</string>
    <string name="fondo_pantalla_abdominales">color/holo_red_dark</string>


    <!-- aceptar y cancelar -->
    <string name="aceptar">Ok</string>
    <string name="cancelar">Cancel</string>

    <!-- acerca de -->
    <string name="texto_presentacion">Bienvenido a la App de Breaking Up At Home (En Forma En Casa). \n\n
	Esta App ha sido desarrollada como punto de partida para mejorar nuestra forma física sin salir de casa, dando la opción de controlar nuestro progreso de manera que sea sencillo, y dando tanto tiempo como necesitemos para que la mejora sea real y permanente. \n\n
	Como punto de partida se solicitan datos del usuario: nombre, estatura y peso, así como la opción de dejar la sesión abierta para posteriores conexiones. También proponemos una prueba de resistencia que nos permita empezar a trabajar desde una perspectiva sólida. Esto es, definir un comienzo que nos prepare para un esfuerzo aceptable y sostenible. Queremos que la progresión sea un camino que veamos como algo realizable, no que sea un esfuerzo tal que haga que cada sesión sea insoportable a nivel físico y/o psicológico, y que nos haga desistir a medio o largo plazo. Si, como desarrolladores de la App, conseguimos este objetivo, estaremos alcanzando la meta que pretendíamos al desarrollarla. \n\n
	La prueba de resistencia consiste en hacer una sóla repeticion de cada uno de los ejercicios propuestos en la App, a saber, una sessión para las flexiones, otra para los abdominales, otra para  los fondos, y así hasta los gemelos, guardando el número de repeticiones conseguidas. Debemos llegar a un punto en el que notemos que el ejercicio nos ha puesto cerca de nuestro límite sin alcanzarlo nunca. En base a ese número de repeticiones se genera un plan de entrenamiento personalizado para el usuario que debe ser, como comentabamos más arriba, aceptable y sostenible. \n\n
	Una vez hecha la prueba inicial, se propone una serie de 5 repeticiones por cada ejercicio (flexiones, abdominales, etc), que incluye la posibilidad de cambiar el tiempo de recuperación entre repeticiones y el número de repeticiones a incrementar/decrementar al final de la serie. \n\n
    En caso de no desear hacer la prueba inicial, esta App propone empezar con 5 series de 5 flexiones, 10 abdominales,  5 fondos, 10 sentadillas, 1 dominada y 10 gemelos.\n\n
    Recordemos que mejorar es posible con un poco de constancia por nuestra parte. \n\n
	Por último, tened presente que es importante que consultemos con nuestro médico cualquier circunstancia que se produzca durante los entrenamientos que suponga dolor o incomodidad. Una revisión médica antes de empezar es más que recomendable, sobre todo si hace tiempo que no hacemos ejecicio.\n\n
    </string>

    <string name="repetition_prompt">Rep</string>
    <string-array name="repetition_numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
    </string-array>


    <plurals name="repeticion">
        <!-- zero = 0, one = 1, two = 2, few = n mod 100 in 3..10,  many = n mod 100 in 11..99, other = everything else -->
        <item quantity="zero">repetitions</item>
        <item quantity="one">repetition</item>
        <item quantity="two">repetitions</item>
        <item quantity="few">repetitions</item>
        <item quantity="many">repetitions</item>
        <item quantity="other">repetitions</item>
    </plurals>

</resources>


