<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/usuario_name" >

        <EditTextPreference
            android:id="@+id/user"
            android:title="@string/usuario_title"
            android:icon="@drawable/ic_info_black_24dp"
            android:summary="@string/usuario_summary"
            android:inputType="text"
            android:maxLength="25"
            android:key="key_usuario" />

        <EditTextPreference
            android:id="@+id/age"
            android:title="@string/age_title"
            android:icon="@drawable/ic_info_black_24dp"
            android:summary="@string/age_summary"
            android:inputType="number"
            android:maxLength="3"
            android:key="key_age" />

        <EditTextPreference
            android:id="@+id/weight"
            android:title="@string/weight_title"
            android:icon="@drawable/ic_info_black_24dp"
            android:summary="@string/weight_summary"
            android:inputType="number"
            android:maxLength="3"
            android:key="key_age" />


    </PreferenceCategory>


</PreferenceScreen>