<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_flexiones"
            android:icon="@mipmap/ic_flexiones"
            android:title="@string/action_flexiones" />
        <item
            android:id="@+id/nav_abdominales"
            android:icon="@mipmap/ic_abdominales"
            android:title="@string/action_abdominales" />
        <item
            android:id="@+id/nav_fondos"
            android:icon="@mipmap/ic_fondos"
            android:title="@string/action_fondos" />
        <item
            android:id="@+id/nav_sentadillas"
            android:icon="@mipmap/ic_sentadillas"
            android:title="@string/action_sentadillas" />
        <item
            android:id="@+id/nav_dominadas"
            android:icon="@mipmap/ic_dominadas"
            android:title="@string/action_dominadas" />
        <item
            android:id="@+id/nav_gemelos"
            android:icon="@mipmap/ic_gemelos"
            android:title="@string/action_gemelos" />
    </group>

    <item android:title="@string/action_acerca_de">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/action_acerca_de" />
        </menu>
    </item>

</menu>
